Update sql schema by timer